log4.txt
Script started on 2024-03-14 00:12:51+00:00 [TERM="xterm-256color" TTY="/dev/pts/1" COLUMNS="150" LINES="22"]
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ exit

Script done on 2024-03-14 00:13:31+00:00 [COMMAND_EXIT_CODE="0"]
, '<A>': {('a', '<A>'), ('a',)}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input2.txt output.txt
Traceback (most recent call last):
  File "/workspaces/FLT3/main.py", line 183, in <module>
    printf("CFG\n",reachable_CFG_Grammar,"\nstart symbol\n",start_char)
NameError: name 'printf' is not defined. Did you mean: 'print'?
[0;32m@adilamanm01 [1;31m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input2.txt output.txt
  File "/workspaces/FLT3/main.py", line 176
    sta rt_char = next(iter(CFG_Grammar))
        ^^^^^^^
SyntaxError: invalid syntax
[0;32m@adilamanm01 [1;31m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input2.txt output.txt
  File "/workspaces/FLT3/main.py", line 176
    sta rt_char = next(iter(CFG_Grammar))
        ^^^^^^^
SyntaxError: invalid syntax
[0;32m@adilamanm01 [1;31m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input2.txt output.txt
  File "/workspaces/FLT3/main.py", line 176
    sta rt_char = next(iter(CFG_Grammar))
        ^^^^^^^
SyntaxError: invalid syntax
[0;32m@adilamanm01 [1;31m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input2.txt output.txt
  File "/workspaces/FLT3/main.py", line 176
    sta rt_char = next(iter(CFG_Grammar))
        ^^^^^^^
SyntaxError: invalid syntax
[0;32m@adilamanm01 [1;31m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input2.txt output.txt
  File "/workspaces/FLT3/main.py", line 179
    productiv e_CFG_Grammar, productive_terminals_list, productive_non_terminals_list = function_remove_unproductive(CFG_Grammar, terminals_list, non_terminals_list)
              ^^^^^^^^^^^^^
SyntaxError: invalid syntax
[0;32m@adilamanm01 [1;31m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input2.txt output.txt
Traceback (most recent call last):
  File "/workspaces/FLT3/main.py", line 183, in <module>
    printf("CFG\n",reachable_CFG_Grammar,"\nstart symbol\n",start_char)
NameError: name 'printf' is not defined. Did you mean: 'print'?
[0;32m@adilamanm01 [1;31m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input2.txt output.txt
CFG
 {'<A>': {('a',), ('a', '<A>')}, '<S>': {('b',), ('<A>',)}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input2.txt output.txt[1P[1@1
CFG
 {'<A>': {('a', '<A>'), ('a',)}, '<S>': {('<A>', '<B>'), ('a',)}, '<B>': {('b',)}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input1.txt output.txt[1P
Space error: Non-terminal symbols must be separated by spaces.
[0;32m@adilamanm01 [1;31m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input.txt output.txt
CFG
 {'<B>': {('a', '<A>')}, '<A>': {('a', '<A>', 'b'), ()}, '<S>': {('<A>', '<B>')}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input.txt output.txt[1@1[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C2[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C
[K[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input2.txt output.txt
CFG
 {'<S>': {('b',), ('<A>',)}, '<A>': {('a', '<A>'), ('a',)}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input2.txt output.txt[1P[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[1@6
CFG
 {'<S>': {('a', '<S>', 'b'), ()}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input6.txt output.txt[1P[1@3
CFG
 {} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input3.txt output.txt[1P[1@2
CFG
 {'<S>': {('<A>',), ('b',)}, '<A>': {('a',), ('a', '<A>')}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input2.txt output.txt[1P[1@1
CFG
 {'<A>': {('a',), ('a', '<A>')}, '<S>': {('<A>', '<B>'), ('a',)}, '<B>': {('b',)}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input1.txt output.txt[1P[1@5
CFG
 {'<expression>': {('id',), ('<expression>', '+', '<expression>'), ('(', '<expression>', ')')}} 
start symbol
 <expression>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input5.txt output.txt[C[1P[1@4
CFG
 {'<A>': {('<C>',), ('a', '<A>')}, '<T>': {('<A>', '<B>', '<C>')}, '<B>': {('<C>',), ('<B>', 'b')}, '<C>': {('c',), ()}, '<S>': {('a', '<T>', 'a')}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input4.txt output.txt[1P[1@2
CFG
 {'<A>': {('a',), ('a', '<A>')}, '<S>': {('<A>',), ('b',)}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input2.txt output.txt[1P
Space error: Non-terminal symbols must be separated by spaces.
[0;32m@adilamanm01 [1;31m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input.txt output.txt
Symbols must be properly classified and separated by spaces
[0;32m@adilamanm01 [1;31m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input.txt output.txt
CFG
 {'<S>': {('<A>', '<B>')}, '<A>': {(), ('a', '<A>', 'b')}, '<B>': {('a', '<A>')}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input.txt output.txt
CFG
 {'<B>': {('a', '<A>')}, '<A>': {('a', '<A>', 'b'), ()}, '<S>': {('<A>', '<B>')}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input.txt output.txt
CFG
 {'<A>': {('a', '<A>', 'b'), ()}, '<S>': {('<A>', '<B>')}, '<B>': {('a', '<A>')}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input.txt output.txt
CFG
 {'<B>': {('a', '<A>')}, '<A>': {('a', '<A>', 'b'), ()}, '<S>': {('<A>', '<B>')}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ python3 main.py input.txt output.txt
CFG
 {'<B>': {('a', '<A>')}, '<A>': {(), ('a', '<A>', 'b')}, '<S>': {('<A>', '<B>')}} 
start symbol
 <S>
[0;32m@adilamanm01 [0m➜ [1;34m/workspaces/FLT3 [0;36m([1;31mmain[0;36m) [0m$ exit

Script done on 2024-03-14 00:10:41+00:00 [COMMAND_EXIT_CODE="0"]